--- a/lib/engweb_web/live/user_live/user_profile_live.html.heex
+++ b/lib/engweb_web/live/user_live/user_profile_live.html.heex
@@ -7,9 +7,9 @@
     </svg>
   </div>
   <div class="flex-1">
-    <h1 class="text-2xl font-bold mb-4">Profile (<%= @user.role %>)</h1>
+    <h1 class="text-2xl font-bold mb-4">Perfil (<%= @user.role %>)</h1>
     <div class="mb-4">
-      <label class="block mb-2 font-semibold">Name:</label>
+      <label class="block mb-2 font-semibold">Nome:</label>
       <p class="border rounded border-gray-500 w-full py-2 px-3"><%= @user.name %></p>
     </div>
     <div class="mb-4">
@@ -17,20 +17,20 @@
       <p class="border rounded border-gray-500 w-full py-2 px-3"><%= @user.email %></p>
     </div>
     <div class="mb-4">
-      <label class="block mb-2 font-semibold">Filiation:</label>
+      <label class="block mb-2 font-semibold">Filiação:</label>
       <p class="border rounded border-gray-500 w-full py-2 px-3"><%= @user.filiation %></p>
     </div>
     <div class="mb-4">
-      <label class="block mb-2 opacity-50">Confirmed at <%= @user.confirmed_at %></label>
+      <label class="block mb-2 opacity-50">Confirmado às <%= @user.confirmed_at %></label>
     </div>
 
     <!-- Navigation Tabs -->
     <div class="flex space-x-4 border-b mb-4">
       <a href={profile_url(@user.id, "roads")} class={"py-1 px-4 rounded-md " <> if(@active_tab == :roads, do: "bg-blue-600 text-white", else: "text-gray-600 hover:bg-gray-200 hover:text-black")}>
-        Roads
+        Ruas
       </a>
       <a href={profile_url(@user.id, "comments")} class={"py-1 px-4 rounded-md " <> if(@active_tab == :comments, do: "bg-blue-600 text-white", else: "text-gray-600 hover:bg-gray-200 hover:text-black")}>
-        Comments
+        Comentários
       </a>
     </div>
 
@@ -39,7 +39,7 @@
       <%= if @active_tab == :roads do %>
         <div class="space-y-6">
           <%= if Enum.empty?(@roads) do %>
-            <p>No activity detected</p>
+            <p>Nenhuma atividade foi detetada</p>
           <% else %>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 mt-10">
               <%= for road <- @roads do %>
@@ -68,7 +68,7 @@
       <%= if @active_tab == :comments do %>
         <ul>
           <%= if Enum.empty?(@comments) do %>
-            <li>No activity detected</li>
+            <li>Nenhuma atividade foi detetada</li>
           <% else %>
             <%= for comment <- @comments do %>
               <li>
