--- a/lib/engweb_web/live/user_live/user_profile_live.html.heex
+++ b/lib/engweb_web/live/user_live/user_profile_live.html.heex
@@ -48,7 +48,7 @@
                     <%= if Enum.any?(road.current_images) do %>
                       <% current_image = hd(road.current_images) %>
                       <div class="absolute top-0 left-0 w-full h-full overflow-hidden">
-                        <img src={current_image.image} alt="Current Image" class="object-cover w-full h-full ransform hover:scale-110 transition duration-500 ease-in-out"/>
+                        <img src={Engweb.Uploaders.ImageUploader.url({current_image.image, current_image})} alt="Current Image" class="object-cover w-full h-full ransform hover:scale-110 transition duration-500 ease-in-out"/>
                         <div class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center p-2">
                           <p class="text-lg font-bold"><%= road.name %></p>
                         </div>
