--- a/lib/engweb_web/live/road_live/index.html.heex
+++ b/lib/engweb_web/live/road_live/index.html.heex
@@ -22,21 +22,32 @@
 
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 mt-10">
     <%= for {_, road} <- @streams.roads do %>
-      <div class="bg-white rounded-md overflow-hidden cursor-pointer shadow-md" phx-click="navigate_to_road" phx-value-id={road.id}>
+      <div class="bg-white rounded-md overflow-hidden cursor-pointer shadow-md">
         <div class="relative group" style="padding-top: 80%;">
           <%= if Enum.any?(road.current_images) do %>
             <% current_image = hd(road.current_images) %>
             <div class="absolute top-0 left-0 w-full h-full overflow-hidden">
-              <img src={Engweb.Uploaders.ImageUploader.url({current_image.image, current_image})} alt="Current Image" class="object-cover w-full h-full ransform hover:scale-110 transition duration-500 ease-in-out"/>
-              <div class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white text-center p-2">
-                <p class="text-lg font-bold"><%= road.name %></p>
+              <.link patch={~p"/roads/#{road.id}"}>
+                <img src={Engweb.Uploaders.ImageUploader.url({current_image.image, current_image})} alt="Current Image" class="object-cover w-full h-full transform hover:scale-110 transition duration-500 ease-in-out"/>
+              </.link>
+              <div class="absolute bottom-0 left-0 w-full bg-black bg-opacity-50 text-white p-2 flex items-center justify-between">
+                <p class="text-lg font-bold text-center w-full"><%= road.name %></p>
+                <div class="flex justify-end">
+                  <.button>
+                    <.link href={"roads/#{road.id}/download"} method="get">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
+                      </svg>                                  
+                    </.link>
+                  </.button>
+                </div>
               </div>
-            </div>
-          <% end %>
+            </div>            
+            <% end %>
+          </div>
+          <div class="grid grid-cols-2 gap-4">
+          </div>
         </div>
-        <div class="grid grid-cols-2 gap-4">
-        </div>
-      </div>
     <% end %>
   </div>
 </div>
